samples/_failures_safe/1761157570_10b15d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_713e9c4f.c: In function ‘main’:
./samples/SAFE/__tmp_713e9c4f.c:129:5: error: expected ‘,’ or ‘;’ at end of input
  129 |     int column = 1
      |     ^~~
./samples/SAFE/__tmp_713e9c4f.c:129:5: error: expected declaration or statement at end of input
